# gpui-flutter

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
crates/gallery/: Cargo.toml
crates/gallery/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: color.rs  lib.rs  prelude.rs  styled_ext.rs
crates/ui/src/accessibility/: mod.rs
crates/ui/src/components/: button.rs  column.rs  container.rs  mod.rs  row.rs  text.rs
crates/ui/src/icons/: mod.rs
crates/ui/src/layout/: align.rs  center.rs  flexible.rs  mod.rs  padding.rs  sized_box.rs  spacer.rs
crates/ui/src/theme/: colors.rs  mod.rs  registry.rs  types.rs
crates/ui/themes/: default-dark.json  default-light.json
docs/: gpui.md
docs/plans/: 2026-01-19-color-type.md  2026-01-19-initial-setup.md  2026-01-19-layout-primitives.md
docs/research/: flutter-style-api.md  gpui-component-architecture.md  icons-and-accessibility-updated.md  icons-and-accessibility.md  storybook-strategy.md
