[workspace]
resolver = "2"
members = [
    "crates/ui",
    "crates/gallery",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/gpui-flutter"

[workspace.dependencies]
# GPUI
gpui = "0.2"

# Icons
lucide-icons = "0.555"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
